--- a/src/main/resources/templates/chels/Registration.html
+++ b/src/main/resources/templates/chels/Registration.html
@@ -8,7 +8,7 @@
 <body>
 
 
-
+<div th:insert="fragment/header :: defaultHeader"></div>
 <div class="container">
     <form action="add" method="post">
         <div class="mb-3">
