--- a/src/main/resources/templates/gryadka/AddOvosh.html
+++ b/src/main/resources/templates/gryadka/AddOvosh.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <!--  Bootstrap css link  -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title th:text="${pageTitle}"></title>
 </head>
 <body>
 
-
+<div th:insert="fragment/header :: defaultHeader"></div>
 
 <div class="container">
     <form action="add" method="post">
