--- a/src/main/resources/templates/gryadka/AllOvoshi.html
+++ b/src/main/resources/templates/gryadka/AllOvoshi.html
@@ -3,19 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <!--  Bootstrap css link  -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title th:text="pageTitle"></title>
 </head>
 <body>
-
-<form action="/gryadka/search" method="get" class="container">
-  <div class="mb-3">
-    <input type="search" id="name" name="name" class="form-control">
-    <button type="submit" class="btn btn-outline-info">
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-      </svg>
+<div th:insert="fragment/header :: defaultHeader"></div>
+<form action="/gryadka/search" method="get">
+  <div class="mb-3 form-group">
+    <label for="name">Find by name</label>
+    <input type="search" id="name" name="name" class="form-control" placeholder="Search">
+    <button type="submit" class="btn btn-success mt-3">
+      Find
     </button>
   </div>
+</form>
+<form action="/gryadka/add" method="get">
+  <button  type="submit" class="btn btn-primary mt-3">
+    Add
+  </button>
 </form>
 
 <div class="container">
@@ -26,6 +31,23 @@
           <h5 class="card-title" th:text="${el.name}"></h5>
           <p class="card-text" th:text="'Color: ' + ${el.color}"></p>
           <p class="card-subtitle mb-2" th:text="'IQ: ' + ${el.IQ}"></p>
+        </div>
+        <div class="btn-group d-flex justify-content-around mb-3">
+          <form th:action="'/gryadka/' + ${el.id}" method="get">
+            <button  type="submit" class="btn btn-success mt-3">
+              View
+            </button>
+          </form>
+          <form th:action="'/gryadka/edit/' + ${el.id}" method="get">
+            <button  type="submit" class="btn btn-primary mt-3">
+              Edit
+            </button>
+          </form>
+          <form th:action="'/gryadka/delete/' + ${el.id}" method="get">
+            <button  type="submit" class="btn btn-danger mt-3">
+              Delete
+            </button>
+          </form>
         </div>
       </div>
     </div>
