--- a/src/main/resources/templates/chels/AllChels.html
+++ b/src/main/resources/templates/chels/AllChels.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--  Bootstrap css link  -->
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title th:text="pageTitle"></title>
 </head>
 <body>
@@ -17,15 +17,39 @@
   </div>
 </form>
 
+<form action="/chel/registration" method="get" class="container">
+    <button type="submit" class="btn btn-outline-info">
+      New user
+    </button>
+</form>
+
 <div class="container">
   <div class="row my-5">
     <div class="col-12 col-md-3 mb-3" th:each="el : ${chels}">
       <div class="card">
         <div class="card-body">
+          <h6 class="card-subtitle mb-2 text-muted" th:text="'Id: ' + ${el.id}"></h6>
           <h5 class="card-title" th:text="${el.name}"></h5>
           <h6 class="card-subtitle mb-2 text-muted" th:text="'Nickname: ' + ${el.nickname}"></h6>
           <p class="card-subtitle mb-2" th:text="'Gender: ' + ${el.gender}"></p>
           <p class="card-subtitle mb-2" th:text="'Zoomer?: ' + ${el.isZoomer ? 'Yes' : 'Nonono'}"></p>
+        </div>
+        <div class="btn-group d-flex justify-content-around mb-3">
+          <form th:action="'/chel/' + ${el.id}" method="get">
+            <button  type="submit" class="btn btn-success mt-3">
+              View
+            </button>
+          </form>
+          <form th:action="'/chel/edit/' + ${el.id}" method="get">
+            <button  type="submit" class="btn btn-primary mt-3">
+              Edit
+            </button>
+          </form>
+          <form th:action="'/chel/delete/' + ${el.id}" method="get">
+            <button  type="submit" class="btn btn-danger mt-3">
+              Delete
+            </button>
+          </form>
         </div>
       </div>
     </div>
