--- a/src/main/resources/templates/chels/Registration.html
+++ b/src/main/resources/templates/chels/Registration.html
@@ -12,32 +12,36 @@
 
 <div th:insert="fragment/header :: defaultHeader"></div>
 <div class="container">
-    <form action="add" method="post">
+    <form action="add" method="post" th:object="${chel}">
         <div class="mb-3">
             <label for="name">Your name</label>
-            <input type="text" id="name" name="name" class="form-control" placeholder="Enter the your name">
+            <input type="text" id="name" name="name" class="form-control" placeholder="Enter the your name" th:field="*{name}">
+            <div th:if="${#fields.hasErrors('name')}" th:errors = "*{name}"></div>
         </div>
         <div class="mb-3">
             <label for="nickname">Your name</label>
-            <input id="nickname" name="nickname" class="form-control" placeholder="Enter the your nickname">
+            <input id="nickname" name="nickname" class="form-control" placeholder="Enter the your nickname" th:field="*{nickname}">
+            <div th:if="${#fields.hasErrors('nickname')}" th:errors = "*{nickname}"></div>
         </div>
         <div class="mb-3">
-            <label for="age">Your age</label>
-            <input type="number" id="age" name="age" class="form-control" placeholder="Enter the your age">
+            <label for="age">Your age</label>            <input type="number" id="age" name="age" class="form-control" placeholder="Enter the your age" th:field="*{age}">
+            <div th:if="${#fields.hasErrors('age')}" th:errors = "*{age}"></div>
         </div>
         <div class="mb-3">
             <label for="gender">Choose your gender</label>
-            <select class="form-select" id="gender" name="gender" aria-label="Default select example">
+            <select class="form-select" id="gender" name="gender" aria-label="Default select example" th:field="*{gender}">
                 <option value="Person">Person</option>
                 <option value="Woman moment">Woman moment</option>
                 <option value="Panzerhaubitze 2000">Panzerhaubitze 2000</option>
             </select>
+            <div th:if="${#fields.hasErrors('gender')}" th:errors = "*{gender}"></div>
         </div>
         <div>
             <label for="isZoomer">
                 Zoomerok?
             </label>
-            <input type="checkbox" name="isZoomer" id="isZoomer"><br/>
+            <input type="checkbox" name="isZoomer" id="isZoomer" th:field="*{isZoomer}"><br/>
+            <div th:if="${#fields.hasErrors('isZoomer')}" th:errors = "*{isZoomer}"></div>
         </div>
         <button type="submit" class="btn btn-outline-primary mb-3">Sign up</button>
     </form>
